#1003 [FIX] z-index값 수정으로 드롭다운과 모달창 겹침 이슈 해결

--- a/src/shared/component/dropdown/Dropdown/Dropdown.module.css
+++ b/src/shared/component/dropdown/Dropdown/Dropdown.module.css
@@ -8,7 +8,7 @@
   position: absolute;
   top: calc(100% + 1rem);
   width: 100%;
-  z-index: 999;
+  z-index: 1;
   background-color: var(--white);
 
   max-height: 0;
